// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MemosComponent /> renders without crashing 1`] = `
<React.Fragment>
  <CommentGroup
    size="large"
  >
    <Connect(MemoComponent)
      key="NaN"
      memo={
        Object {
          "key": "1",
          "memoText": "MemoText",
        }
      }
    />
  </CommentGroup>
</React.Fragment>
`;

exports[`<MemosComponent /> should render memos 1`] = `
<React.Fragment>
  <CommentGroup
    size="large"
  >
    <Connect(MemoComponent)
      key="1alice"
      memo={
        Object {
          "avatarUrl": "https://s3.amazonaws.com/uifaces/faces/twitter/chaabane_wail/128.jpg",
          "idx": 1,
          "memoDatetime": "2018-07-26T16:44:56.000Z",
          "memoLikesCount": 1,
          "memoRepliesCount": 0,
          "memoText": "Suscipit vel nobis.",
          "memoTipTotal": 0,
          "username": "alice",
        }
      }
    />
    <Connect(MemoComponent)
      key="2alice"
      memo={
        Object {
          "avatarUrl": "https://s3.amazonaws.com/uifaces/faces/twitter/chaabane_wail/128.jpg",
          "idx": 2,
          "memoDatetime": "2018-07-26T16:44:58.620Z",
          "memoLikesCount": 0,
          "memoRepliesCount": 0,
          "memoText": "Praesentium libero est repudiandae et repudiandae.",
          "memoTipTotal": 0,
          "username": "alice",
        }
      }
    />
  </CommentGroup>
</React.Fragment>
`;
